[gd_scene load_steps=4 format=3 uid="uid://mdww2i5k8jub"]

[ext_resource type="Script" path="res://scripts/bread_health_bar.gd" id="1_0bcee"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0kmgd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fgtk"]
bg_color = Color(0.760784, 0.227451, 0.662745, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="BreadHealthBar" type="ProgressBar"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -147.0
offset_bottom = 27.0
grow_horizontal = 0
max_value = 1.0
value = 0.1
show_percentage = false
script = ExtResource("1_0bcee")

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="JamBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_0kmgd")
theme_override_styles/fill = SubResource("StyleBoxFlat_7fgtk")
max_value = 1.0
value = 0.1
fill_mode = 1
show_percentage = false

[connection signal="timeout" from="UpdateTimer" to="." method="_on_update_timer_timeout"]
